compat with some renames in the api

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -281,126 +281,15 @@
 	<gw2object type="skill" objid="5573"></gw2object>
 	<p>Base Glyphs should show statefull versions</p>
 
-	<gw2object type="skill" objid="7779"></gw2object>
-	<gw2object type="skill" objid="10528"></gw2object>
-	<gw2object type="skill" objid="10529"></gw2object>
-	<gw2object type="skill" objid="10531"></gw2object>
-	<gw2object type="skill" objid="10545"></gw2object>
-	<gw2object type="skill" objid="10550"></gw2object>
-	<gw2object type="skill" objid="10557"></gw2object>
-	<gw2object type="skill" objid="10566"></gw2object>
-	<gw2object type="skill" objid="10568"></gw2object>
-	<gw2object type="skill" objid="10573"></gw2object>
-	<gw2object type="skill" objid="10583"></gw2object>
-	<gw2object type="skill" objid="10590"></gw2object>
-	<gw2object type="skill" objid="10594"></gw2object>
-	<gw2object type="skill" objid="10596"></gw2object>
-	<gw2object type="skill" objid="10597"></gw2object>
-	<gw2object type="skill" objid="10600"></gw2object>
-	<gw2object type="skill" objid="10605"></gw2object>
-	<gw2object type="skill" objid="10608"></gw2object>
-	<gw2object type="skill" objid="10611"></gw2object>
-	<gw2object type="skill" objid="10617"></gw2object>
-	<gw2object type="skill" objid="10620"></gw2object>
-	<gw2object type="skill" objid="10623"></gw2object>
-	<gw2object type="skill" objid="10624"></gw2object>
-	<gw2object type="skill" objid="10671"></gw2object>
-	<gw2object type="skill" objid="10676"></gw2object>
-	<gw2object type="skill" objid="10685"></gw2object>
-	<gw2object type="skill" objid="10703"></gw2object>
-	<gw2object type="skill" objid="10704"></gw2object>
-	<gw2object type="skill" objid="10707"></gw2object>
-	<gw2object type="skill" objid="10708"></gw2object>
-	<gw2object type="skill" objid="10709"></gw2object>
-	<gw2object type="skill" objid="10710"></gw2object>
-	<gw2object type="skill" objid="13917"></gw2object>
-	<gw2object type="skill" objid="13918"></gw2object>
-	<gw2object type="skill" objid="16174"></gw2object>
-	<gw2object type="skill" objid="16175"></gw2object>
-	<gw2object type="skill" objid="18507"></gw2object>
-	<gw2object type="skill" objid="19115"></gw2object>
-	<gw2object type="skill" objid="19116"></gw2object>
-	<gw2object type="skill" objid="19117"></gw2object>
-	<gw2object type="skill" objid="21808"></gw2object>
-	<gw2object type="skill" objid="22553"></gw2object>
-	<gw2object type="skill" objid="22554"></gw2object>
-	<gw2object type="skill" objid="24544"></gw2object>
-	<gw2object type="skill" objid="26426"></gw2object>
-	<gw2object type="skill" objid="27527"></gw2object>
-	<gw2object type="skill" objid="29570"></gw2object>
-	<gw2object type="skill" objid="29626"></gw2object>
-	<gw2object type="skill" objid="29705"></gw2object>
-	<gw2object type="skill" objid="29738"></gw2object>
-	<gw2object type="skill" objid="29740"></gw2object>
-	<gw2object type="skill" objid="29867"></gw2object>
-	<gw2object type="skill" objid="29886"></gw2object>
-	<gw2object type="skill" objid="30141"></gw2object>
-	<gw2object type="skill" objid="30215"></gw2object>
-	<gw2object type="skill" objid="30274"></gw2object>
-	<gw2object type="skill" objid="30278"></gw2object>
-	<gw2object type="skill" objid="30315"></gw2object>
-	<gw2object type="skill" objid="30325"></gw2object>
-	<gw2object type="skill" objid="30361"></gw2object>
-	<gw2object type="skill" objid="30488"></gw2object>
-	<gw2object type="skill" objid="30574"></gw2object>
-	<gw2object type="skill" objid="30720"></gw2object>
-	<gw2object type="skill" objid="30738"></gw2object>
-	<gw2object type="skill" objid="30799"></gw2object>
-	<gw2object type="skill" objid="30860"></gw2object>
-	<gw2object type="skill" objid="40333"></gw2object>
-	<gw2object type="skill" objid="41821"></gw2object>
-	<gw2object type="skill" objid="42305"></gw2object>
-	<gw2object type="skill" objid="42935"></gw2object>
-	<gw2object type="skill" objid="43623"></gw2object>
-	<gw2object type="skill" objid="43782"></gw2object>
-	<gw2object type="skill" objid="43848"></gw2object>
-	<gw2object type="skill" objid="44071"></gw2object>
-	<gw2object type="skill" objid="45477"></gw2object>
-	<gw2object type="skill" objid="45846"></gw2object>
-	<gw2object type="skill" objid="46086"></gw2object>
-	<gw2object type="skill" objid="47604"></gw2object>
-	<gw2object type="skill" objid="47621"></gw2object>
-	<gw2object type="skill" objid="47826"></gw2object>
-	<gw2object type="skill" objid="48405"></gw2object>
-	<gw2object type="skill" objid="49238"></gw2object>
 	<gw2object type="skill" objid="51647"></gw2object>
-	<gw2object type="skill" objid="52079"></gw2object>
-	<gw2object type="skill" objid="55038"></gw2object>
-	<gw2object type="skill" objid="55050"></gw2object>
-	<gw2object type="skill" objid="55610"></gw2object>
-	<gw2object type="skill" objid="55671"></gw2object>
-	<gw2object type="skill" objid="55894"></gw2object>
-	<gw2object type="skill" objid="57670"></gw2object>
-	<gw2object type="skill" objid="57898"></gw2object>
-	<gw2object type="skill" objid="60232"></gw2object>
-	<gw2object type="skill" objid="60515"></gw2object>
-	<gw2object type="skill" objid="60599"></gw2object>
-	<gw2object type="skill" objid="62511"></gw2object>
-	<gw2object type="skill" objid="62513"></gw2object>
 	<gw2object type="skill" objid="62563"></gw2object>
-	<gw2object type="skill" objid="62599"></gw2object>
-	<gw2object type="skill" objid="62670"></gw2object>
 	<gw2object type="skill" objid="68117"></gw2object>
-	<p>LifeForceAdjust</p>
+	<p>PercentLifeForceGain</p>
 
-	<gw2object type="skill" objid="40071"></gw2object>
-	<gw2object type="skill" objid="40813"></gw2object>
-	<gw2object type="skill" objid="42696"></gw2object>
-	<gw2object type="skill" objid="43314"></gw2object>
-	<gw2object type="skill" objid="43448"></gw2object>
-	<gw2object type="skill" objid="44428"></gw2object>
-	<gw2object type="skill" objid="44663"></gw2object>
-	<gw2object type="skill" objid="44869"></gw2object>
-	<gw2object type="skill" objid="45280"></gw2object>
-	<gw2object type="skill" objid="45975"></gw2object>
-	<gw2object type="skill" objid="46058"></gw2object>
-	<gw2object type="skill" objid="46726"></gw2object>
-	<gw2object type="skill" objid="54870"></gw2object>
-	<gw2object type="skill" objid="54883"></gw2object>
-	<gw2object type="skill" objid="54958"></gw2object>
+	
 	<gw2object type="skill" objid="58081"></gw2object>
 	<gw2object type="skill" objid="58093"></gw2object>
 	<gw2object type="skill" objid="58094"></gw2object>
-	<p>PercentLifeForceAdjust</p>
+	<p>PercentLifeForceCost</p>
 </body>
 </html>
