--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -7,14 +7,21 @@
 	var GW2TooltipsConfig = {
 		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
-	var GW2TooltipsContext = {
+	var GW2TooltipsContext = [{
 		gameMode: 'Pve',
 		character: {
 			stats: {
 				vitality: 1324
 			}
 		}
-	}
+	}, {
+		gameMode: 'Pvp',
+		character: {
+			stats: {
+				vitality: 1324
+			}
+		}
+	}]
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
 <style> gw2object:not(.gw2objectembed) { width: 64px; height: 64px; } </style>
@@ -160,6 +167,9 @@
 	<gw2object type="skill" objid="10204"></gw2object>
 	<gw2object type="skill" objid="10543"></gw2object>
 	<gw2object type="skill" objid="42259"></gw2object>
+	<gw2object type="skill" objid="10646"></gw2object>
+	<gw2object type="skill" objid="10547"></gw2object>
+	<gw2object type="skill" objid="10541"></gw2object>
 	this one should not have a toggle skill: <gw2object type="skill" objid="5692"></gw2object>
 	<p>Toggle skills.</p>
 
@@ -286,10 +296,12 @@
 	<gw2object type="skill" objid="68117"></gw2object>
 	<p>PercentLifeForceGain</p>
 
-	
 	<gw2object type="skill" objid="58081"></gw2object>
 	<gw2object type="skill" objid="58093"></gw2object>
 	<gw2object type="skill" objid="58094"></gw2object>
 	<p>PercentLifeForceCost</p>
+
+	<gw2object type="skill" objid="30670" contextSet="1" with-traits="1863"></gw2object>
+	<p>The vulnerability say 'Exists because of trait "..."' </p>
 </body>
 </html>
