--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -226,6 +226,7 @@
 	<gw2object type="item" objid="100074"></gw2object>
 	<gw2object type="item" objid="100115"></gw2object>
 	<p>relics</p>
+	<p>Icons on sub-skills should be hidden as they are just not meant to be shown and have a high rate of jank</p>
 
 	<gw2object type="skill" objid="26821"></gw2object>
 	<gw2object type="skill" objid="27025"></gw2object>
@@ -302,6 +303,10 @@
 	<p>PercentLifeForceCost</p>
 
 	<gw2object type="skill" objid="30670" contextSet="1" with-traits="1863"></gw2object>
-	<p>The vulnerability say 'Exists because of trait "..."' </p>
+	<p>The vulnerability fact should say 'Exists because of trait "..."'</p>
+
+	<gw2object type="trait" objid="2227"></gw2object>
+	<gw2object type="trait" objid="335"></gw2object>
+	<p>Hide icons on sub-skills for traits that would be dev icons (spheres would be dev icons)</p>
 </body>
 </html>
