changed interface for skip_next flag to be a counter instead of bool.
This fixes some issue where a fact is overridden by a trait and gamemode, resulting in not all other versions being skipped properly.
Also requires an api update.

closes #73,
maybe related: #57, #74

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -307,6 +307,9 @@
 
 	<gw2object type="trait" objid="2227"></gw2object>
 	<gw2object type="trait" objid="335"></gw2object>
-	<p>Hide icons on sub-skills for traits that would be dev icons (spheres would be dev icons)</p>
+	<p>Hide icons on sub-skills for traits that would be dev icons (spheres would be dev icons). The second trait should show a subskill icon</p>
+
+	<gw2object type="skill" objid="10532" contextSet="1" with-traits="801"></gw2object>
+	<p>Multiple skip layers. The skill should only show one bleeding and one cripple fact.</p>
 </body>
 </html>
