changed context specialization function to apply to apply to all object types (allows manual trat context overrides)

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -311,5 +311,8 @@
 
 	<gw2object type="skill" objid="10532" contextSet="1" with-traits="801"></gw2object>
 	<p>Multiple skip layers. The skill should only show one bleeding and one cripple fact.</p>
+
+	<gw2object type="trait" objid="1942" contextSet="1" with-traits="1927,1942"></gw2object>
+	<p>...</p>
 </body>
 </html>
