--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -312,7 +312,9 @@
 	<gw2object type="skill" objid="10532" contextSet="1" with-traits="801"></gw2object>
 	<p>Multiple skip layers. The skill should only show one bleeding and one cripple fact.</p>
 
+	<gw2object type="trait" objid="2020" contextSet="1" with-traits="1863"></gw2object>
 	<gw2object type="trait" objid="1942" contextSet="1" with-traits="1927,1942"></gw2object>
-	<p>...</p>
+	<gw2object type="trait" objid="487" with-traits="473"></gw2object>
+	<p>Traits that have trigger_traits should not show their facts on the main trait.</p>
 </body>
 </html>
