--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -316,5 +316,10 @@
 	<gw2object type="trait" objid="1942" contextSet="1" with-traits="1927,1942"></gw2object>
 	<gw2object type="trait" objid="487" with-traits="473"></gw2object>
 	<p>Traits that have trigger_traits should not show their facts on the main trait.</p>
+
+	<gw2object type="trait" objid="905"></gw2object>
+	<gw2object type="trait" objid="905" with-traits="2147"></gw2object>
+	<gw2object type="trait" objid="905" with-traits="2183"></gw2object>
+	<p>Even if there is no base block the inset logic has to run. This should be good as long as there aren't any duplicated entries.</p>
 </body>
 </html>
