fixes for attribute conversion mods on traits, some flag renaming
closes #79, closes #80, closes #82

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -77,7 +77,7 @@
 	<p>HealthAdjustHealing fact type + multi hit count. Healing should be 4500.</p>
 
 	<gw2object objid="2220" type="trait"></gw2object>
-	<p>BuffConversion fact type</p>
+	<p>AttributeConversion fact type</p>
 	
 	<gw2object objid="30520" type="skill"></gw2object>
 	<gw2object objid="16344" type="skill"></gw2object>
@@ -321,5 +321,35 @@
 	<gw2object type="trait" objid="905" with-traits="2147"></gw2object>
 	<gw2object type="trait" objid="905" with-traits="2183"></gw2object>
 	<p>Even if there is no base block the inset logic has to run. This should be good as long as there aren't any duplicated entries.</p>
+
+	<gw2object type="trait" objid="2284"></gw2object>
+	<gw2object type="trait" objid="978"></gw2object>
+	<gw2object type="trait" objid="1746"></gw2object>
+	<gw2object type="trait" objid="2011"></gw2object>
+	<gw2object type="trait" objid="2209"></gw2object>
+	<gw2object type="trait" objid="2264"></gw2object>
+	<gw2object type="trait" objid="1272"></gw2object>
+	<gw2object type="trait" objid="2220"></gw2object>
+	<gw2object type="trait" objid="1099"></gw2object>
+	<gw2object type="trait" objid="810"></gw2object>
+	<gw2object type="trait" objid="620"></gw2object>
+	<gw2object type="trait" objid="1915"></gw2object>
+	<gw2object type="trait" objid="1944"></gw2object>
+	<gw2object type="trait" objid="2074"></gw2object>
+	<gw2object type="trait" objid="1470"></gw2object>
+	<gw2object type="trait" objid="1933"></gw2object>
+	<gw2object type="trait" objid="2193"></gw2object>
+	<gw2object type="trait" objid="1556"></gw2object>
+	<gw2object type="trait" objid="232"></gw2object>
+	<gw2object type="trait" objid="275"></gw2object>
+	<gw2object type="trait" objid="1449"></gw2object>
+	<gw2object type="trait" objid="2115"></gw2object>
+	<gw2object type="trait" objid="1821"></gw2object>
+	<gw2object type="trait" objid="2052"></gw2object>
+	<gw2object type="trait" objid="2192"></gw2object>
+	<gw2object type="trait" objid="1455"></gw2object>
+	<gw2object type="trait" objid="2131"></gw2object>
+	<gw2object type="trait" objid="1770"></gw2object>
+	<p>Attribute Conversion modifiers. These are just here to load them in the cache.</p>
 </body>
 </html>
