mod trait restriction field renames
also fixed buff mods without time having an extra space before the colon in their description.

closes #81

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -351,5 +351,8 @@
 	<gw2object type="trait" objid="2131"></gw2object>
 	<gw2object type="trait" objid="1770"></gw2object>
 	<p>Attribute Conversion modifiers. These are just here to load them in the cache.</p>
+
+	<gw2object type="trait" objid="2081"></gw2object>
+	<p>This should show numbers.</p>
 </body>
 </html>
