Fixing processing for HealingOrBarrier, i incorrectly assumed its function, this has now been reverted.
closes  #83

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -354,5 +354,11 @@
 
 	<gw2object type="trait" objid="2081"></gw2object>
 	<p>This should show numbers.</p>
+
+	<gw2object type="skill" objid="13882"></gw2object>
+	<gw2object type="skill" objid="13975"></gw2object>
+	<gw2object type="skill" objid="62550"></gw2object>
+	<gw2object type="skill" objid="30304"></gw2object>
+	<p>Skills with AdjustByAttributeAndLevelHealing but nop source attribute.</p>
 </body>
 </html>
