Displaying derived stats on traits / skills that give base stats other misc fixes
closes #52

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -360,5 +360,11 @@
 	<gw2object type="skill" objid="62550"></gw2object>
 	<gw2object type="skill" objid="30304"></gw2object>
 	<p>Skills with AdjustByAttributeAndLevelHealing but nop source attribute.</p>
+
+	<gw2object type="trait" objid="1892"></gw2object>
+	<gw2object type="trait" objid="557"></gw2object>
+	<gw2object type="trait" objid="2115"></gw2object>
+	<gw2object type="trait" objid="1682"></gw2object>
+	<p>Traits with base attribute increases that are derivable.</p>
 </body>
 </html>
