Adding engi kit bundle skills and framework code for others
part of #11

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -366,5 +366,20 @@
 	<gw2object type="trait" objid="2115"></gw2object>
 	<gw2object type="trait" objid="1682"></gw2object>
 	<p>Traits with base attribute increases that are derivable.</p>
+
+
+	<gw2object type="skill" objid="5802"></gw2object>
+	<gw2object type="skill" objid="5933"></gw2object>
+	<gw2object type="skill" objid="5904"></gw2object>
+	<gw2object type="skill" objid="5805"></gw2object>
+	<gw2object type="skill" objid="6020"></gw2object>
+	<gw2object type="skill" objid="5812"></gw2object>
+	<gw2object type="skill" objid="30360"></gw2object>
+	<gw2object type="skill" objid="5927"></gw2object>
+	<gw2object type="skill" objid="30570"></gw2object>
+	<gw2object type="skill" objid="5855"></gw2object>
+	<gw2object type="skill" objid="6174"></gw2object>
+	<gw2object type="skill" objid="30800"></gw2object>
+	<p>Kits</p>
 </body>
 </html>
