Conjure tests for #11

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -381,5 +381,11 @@
 	<gw2object type="skill" objid="6174"></gw2object>
 	<gw2object type="skill" objid="30800"></gw2object>
 	<p>Kits</p>
+
+	<gw2object type="skill" objid="5540"></gw2object>
+	<gw2object type="skill" objid="5546"></gw2object>
+	<gw2object type="skill" objid="5567"></gw2object>
+	<gw2object type="skill" objid="5624"></gw2object>
+	<p>Conjures</p>
 </body>
 </html>
