Fixed swap palette detection logic
fixes #89

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -387,5 +387,8 @@
 	<gw2object type="skill" objid="5567"></gw2object>
 	<gw2object type="skill" objid="5624"></gw2object>
 	<p>Conjures</p>
+
+	<gw2object type="skill"  objid="14356"></gw2object>
+	<p>Skillchain</p>
 </body>
 </html>
