changed how ambush skills works
fixes #90

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -388,7 +388,20 @@
 	<gw2object type="skill" objid="5624"></gw2object>
 	<p>Conjures</p>
 
-	<gw2object type="skill"  objid="14356"></gw2object>
-	<p>Skillchain</p>
+	<gw2object type="skill" objid="14356"></gw2object>
+	<gw2object type="skill" objid="10273"></gw2object>
+	<gw2object type="skill" objid="44791"></gw2object>
+	<p>Skillchain (ambush skills dont work without context)</p>
+
+	
+	<gw2object type="item" objid="69855"></gw2object>
+	<img src="https://cdn.discordapp.com/attachments/1148213598477369454/1170459853723029596/Screenshot_2023-11-04_152854.png?ex=65591eaf&is=6546a9af&hm=1b68e1de1fae6913a5de0a3a0244651e704d7644943ce99585baeb543a5d7552&" />
+	
+	<gw2object type="item" objid="69876"></gw2object>
+	<img src="https://cdn.discordapp.com/attachments/1148213598477369454/1170461764446601298/Screenshot_2023-11-04_153648.png?ex=65592076&is=6546ab76&hm=1fa28068e9011c71b8ef45d1c72562982c4bfe2863c22b3c08d87168c9ec263c&" />
+
+	<gw2object type="item" objid="70042"></gw2object>
+	<img src="https://cdn.discordapp.com/attachments/1148213598477369454/1170462325619294208/Screenshot_2023-11-04_153903.png?ex=655920fc&is=6546abfc&hm=e4482dde99fc017a9ea169c806bc36081175721187f8d8d0860abd2b1ca95193&" />
+	<p>broken ingame</p>
 </body>
 </html>
