context is now terrain aware (underwater skill filters)
closes #101

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -403,5 +403,9 @@
 	<gw2object type="item" objid="70042"></gw2object>
 	<img src="https://cdn.discordapp.com/attachments/1148213598477369454/1170462325619294208/Screenshot_2023-11-04_153903.png?ex=655920fc&is=6546abfc&hm=e4482dde99fc017a9ea169c806bc36081175721187f8d8d0860abd2b1ca95193&" />
 	<p>broken ingame</p>
+
+	<gw2object type="skill" objid="27014"></gw2object>
+	<gw2object type="skill" objid="5805"></gw2object>
+	<p>This should only display one related skill, even tho there are two in the data. Reason being one of them is for underwater.</p>
 </body>
 </html>
