implemented serviceworker based caching. not enabled by default

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -6,6 +6,7 @@
 <script>
 	var GW2TooltipsConfig = {
 		apiImpl: (APIs) => new APIs.FakeAPI(),
+		workerPath: '../out/worker.min.js',
 		autoCollectRuneCounts           : false,
 		autoCollectStatSources          : false,
 		autoCollectSelectedTraits       : false,
