Removed not-collapsable in favour of just outputting desired initial active index form the sub-tt generator
implemented #24

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -28,6 +28,11 @@
 				vitality: 1324
 			}
 		}
+	},{
+		gameMode: 'Pve',
+		character: {
+			specializations: [ 55 ],
+		}
 	}]
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
@@ -414,5 +419,24 @@
 	<gw2object type="skill" objid="27014"></gw2object>
 	<gw2object type="skill" objid="5805"></gw2object>
 	<p>This should only display one related skill, even tho there are two in the data. Reason being one of them is for underwater.</p>
+
+	<h3>profession inlines</h3>
+	<gw2object type="profession" class="gw2objectembed" objid="Guardian"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Warrior"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Engineer"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Ranger"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Thief"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Elementalist"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Mesmer"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Necromancer"></gw2object>
+	<gw2object type="profession" class="gw2objectembed" objid="Revenant"></gw2object>
+
+
+	<h3>Pets</h3>
+	<gw2object type="pet" objid="10"></gw2object>
+	with soulbeast spec:
+	<gw2object type="pet" objid="10" contextSet="2"></gw2object>
+
+	<div style="height: 20em"></div>
 </body>
 </html>
