renamed 'PercentDamage' to more accurate 'PercentHpSelfDamage'

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -77,7 +77,7 @@
 	<p>Showcasing how the lack of FormatFraction causes modifiers to be rounded down. Torment damage should be 95.</p>
 
 	<gw2object objid="43937" type="skill"></gw2object>
-	<p>PercentDamage fact type</p>
+	<p>PercentHpSelfDamage fact type</p>
 
 	<gw2object objid="54870" type="skill"></gw2object>
 	<p>PercentLifeForceAdjust fact type</p>
