--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -5,7 +5,7 @@
 
 <script>
 	var GW2TooltipsConfig = {
-		//apiImpl: (APIs) => new APIs.FakeAPI(),
+		apiImpl: (APIs) => new APIs.FakeAPI(),
 		//workerPath: '../out/worker.min.js',
 		autoCollectRuneCounts           : false,
 		autoCollectStatSources          : false,
@@ -188,7 +188,7 @@
 	<div id="relic-frame"></div>
 	<script>
 		window.addEventListener('load', () => {
-			fetch(GW2TooltipsV2.APICache.apiImpl.baseUrl+'/items/by-name/Relic[s] of')
+			fetch((GW2TooltipsV2.APICache.apiImpl.localAPI?.baseUrl || GW2TooltipsV2.APICache.apiImpl.baseUrl)+'/items/by-name/Relic[s] of')
 			.then(r => r.json())
 			.then(j => {
 				const container = document.getElementById("relic-frame");
