rendering facts on relics

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -205,6 +205,9 @@
 	<p>relics</p>
 	<p>Icons on sub-skills should be hidden as they are just not meant to be shown and have a high rate of jank</p>
 
+	<gw2object type="item" objid="101191"></gw2object>
+	<p>specific relics (check wiki for description match)</p>
+
 	<gw2object type="skill" objid="26821"></gw2object>
 	<gw2object type="skill" objid="27025"></gw2object>
 	<gw2object type="skill" objid="27356"></gw2object>
