basic handling for skin type

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -403,6 +403,12 @@
 	with soulbeast spec:
 	<gw2object type="pet" objid="10" contextSet="2"></gw2object>
 
+	<h3>Skins</h3>
+	<gw2object type="skin" objid="2500"></gw2object>
+	<gw2object type="skin" objid="2501"></gw2object>
+	<gw2object type="skin" objid="2502"></gw2object>
+	<gw2object type="skin" objid="2503"></gw2object>
+
 	<div style="height: 20em"></div>
 </body>
 </html>
