making items skinnable and respecting the prefix flag

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -404,10 +404,20 @@
 	<gw2object type="pet" objid="10" contextSet="2"></gw2object>
 
 	<h3>Skins</h3>
-	<gw2object type="skin" objid="2500"></gw2object>
+	<gw2object type="skin" objid="12"></gw2object>
 	<gw2object type="skin" objid="2501"></gw2object>
 	<gw2object type="skin" objid="2502"></gw2object>
 	<gw2object type="skin" objid="2503"></gw2object>
+
+	<h3>Skined Items</h3>
+	<gw2object type="item" objid="268"></gw2object>
+	with skin:
+	<gw2object type="item" objid="268" skin="12"></gw2object>
+	<br/>
+	<gw2object class="gw2objectembed" type="item" objid="268"></gw2object>
+	with skin:
+	<gw2object class="gw2objectembed" type="item" objid="268" skin="12"></gw2object>
+
 
 	<div style="height: 20em"></div>
 </body>
