test for skill flag 32

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -420,5 +420,181 @@
 
 
 	<div style="height: 20em"></div>
+
+	<gw2object type="skill" objid="35932"></gw2object>
+	<gw2object type="skill" objid="57826"></gw2object>
+	<gw2object type="skill" objid="57991"></gw2object>
+	<gw2object type="skill" objid="31926"></gw2object>
+	<gw2object type="skill" objid="31946"></gw2object>
+	<gw2object type="skill" objid="31950"></gw2object>
+	<gw2object type="skill" objid="32004"></gw2object>
+	<gw2object type="skill" objid="32114"></gw2object>
+	<gw2object type="skill" objid="32174"></gw2object>
+	<gw2object type="skill" objid="32231"></gw2object>
+	<gw2object type="skill" objid="32350"></gw2object>
+	<gw2object type="skill" objid="32352"></gw2object>
+	<gw2object type="skill" objid="32375"></gw2object>
+	<gw2object type="skill" objid="32399"></gw2object>
+	<gw2object type="skill" objid="32414"></gw2object>
+	<gw2object type="skill" objid="32549"></gw2object>
+	<gw2object type="skill" objid="32558"></gw2object>
+	<gw2object type="skill" objid="32626"></gw2object>
+	<gw2object type="skill" objid="32627"></gw2object>
+	<gw2object type="skill" objid="32686"></gw2object>
+	<gw2object type="skill" objid="32917"></gw2object>
+	<gw2object type="skill" objid="32951"></gw2object>
+	<gw2object type="skill" objid="32957"></gw2object>
+	<gw2object type="skill" objid="32959"></gw2object>
+	<gw2object type="skill" objid="33081"></gw2object>
+	<gw2object type="skill" objid="33135"></gw2object>
+	<gw2object type="skill" objid="33229"></gw2object>
+	<gw2object type="skill" objid="33277"></gw2object>
+	<gw2object type="skill" objid="33449"></gw2object>
+	<gw2object type="skill" objid="33459"></gw2object>
+	<gw2object type="skill" objid="33483"></gw2object>
+	<gw2object type="skill" objid="33484"></gw2object>
+	<gw2object type="skill" objid="33554"></gw2object>
+	<gw2object type="skill" objid="33580"></gw2object>
+	<gw2object type="skill" objid="33584"></gw2object>
+	<gw2object type="skill" objid="33779"></gw2object>
+	<gw2object type="skill" objid="33985"></gw2object>
+	<gw2object type="skill" objid="34022"></gw2object>
+	<gw2object type="skill" objid="34048"></gw2object>
+	<gw2object type="skill" objid="71645"></gw2object>
+	<gw2object type="skill" objid="71704"></gw2object>
+	<gw2object type="skill" objid="54505"></gw2object>
+	<gw2object type="skill" objid="54842"></gw2object>
+	<gw2object type="skill" objid="62115"></gw2object>
+	<gw2object type="skill" objid="28404"></gw2object>
+	<gw2object type="skill" objid="63402"></gw2object>
+	<gw2object type="skill" objid="60059"></gw2object>
+	<gw2object type="skill" objid="60125"></gw2object>
+	<gw2object type="skill" objid="60165"></gw2object>
+	<gw2object type="skill" objid="60265"></gw2object>
+	<gw2object type="skill" objid="60298"></gw2object>
+	<gw2object type="skill" objid="60325"></gw2object>
+	<gw2object type="skill" objid="60441"></gw2object>
+	<gw2object type="skill" objid="60596"></gw2object>
+	<gw2object type="skill" objid="25745"></gw2object>
+	<gw2object type="skill" objid="25742"></gw2object>
+	<gw2object type="skill" objid="25744"></gw2object>
+	<gw2object type="skill" objid="25741"></gw2object>
+	<gw2object type="skill" objid="25746"></gw2object>
+	<gw2object type="skill" objid="25743"></gw2object>
+	<gw2object type="skill" objid="23203"></gw2object>
+	<gw2object type="skill" objid="48229"></gw2object>
+	<gw2object type="skill" objid="63124"></gw2object>
+	<gw2object type="skill" objid="35348"></gw2object>
+	<gw2object type="skill" objid="34937"></gw2object>
+	<gw2object type="skill" objid="34945"></gw2object>
+	<gw2object type="skill" objid="35083"></gw2object>
+	<gw2object type="skill" objid="35151"></gw2object>
+	<gw2object type="skill" objid="35623"></gw2object>
+	<gw2object type="skill" objid="54009"></gw2object>
+	<gw2object type="skill" objid="26070"></gw2object>
+	<gw2object type="skill" objid="24387"></gw2object>
+	<gw2object type="skill" objid="24388"></gw2object>
+	<gw2object type="skill" objid="24386"></gw2object>
+	<gw2object type="skill" objid="64406"></gw2object>
+	<gw2object type="skill" objid="66677"></gw2object>
+	<gw2object type="skill" objid="67181"></gw2object>
+	<gw2object type="skill" objid="61142"></gw2object>
+	<gw2object type="skill" objid="25556"></gw2object>
+	<gw2object type="skill" objid="25555"></gw2object>
+	<gw2object type="skill" objid="25559"></gw2object>
+	<gw2object type="skill" objid="25558"></gw2object>
+	<gw2object type="skill" objid="25557"></gw2object>
+	<gw2object type="skill" objid="25554"></gw2object>
+	<gw2object type="skill" objid="60047"></gw2object>
+	<gw2object type="skill" objid="60064"></gw2object>
+	<gw2object type="skill" objid="60167"></gw2object>
+	<gw2object type="skill" objid="68227"></gw2object>
+	<gw2object type="skill" objid="32663"></gw2object>
+	<gw2object type="skill" objid="32974"></gw2object>
+	<gw2object type="skill" objid="33295"></gw2object>
+	<gw2object type="skill" objid="9140"></gw2object>
+	<gw2object type="skill" objid="60635"></gw2object>
+	<gw2object type="skill" objid="9067"></gw2object>
+	<gw2object type="skill" objid="9066"></gw2object>
+	<gw2object type="skill" objid="64005"></gw2object>
+	<gw2object type="skill" objid="64303"></gw2object>
+	<gw2object type="skill" objid="63457"></gw2object>
+	<gw2object type="skill" objid="66661"></gw2object>
+	<gw2object type="skill" objid="35256"></gw2object>
+	<gw2object type="skill" objid="32001"></gw2object>
+	<gw2object type="skill" objid="32090"></gw2object>
+	<gw2object type="skill" objid="32247"></gw2object>
+	<gw2object type="skill" objid="32614"></gw2object>
+	<gw2object type="skill" objid="32615"></gw2object>
+	<gw2object type="skill" objid="32721"></gw2object>
+	<gw2object type="skill" objid="32861"></gw2object>
+	<gw2object type="skill" objid="32953"></gw2object>
+	<gw2object type="skill" objid="33121"></gw2object>
+	<gw2object type="skill" objid="33266"></gw2object>
+	<gw2object type="skill" objid="33366"></gw2object>
+	<gw2object type="skill" objid="33381"></gw2object>
+	<gw2object type="skill" objid="33412"></gw2object>
+	<gw2object type="skill" objid="33538"></gw2object>
+	<gw2object type="skill" objid="33716"></gw2object>
+	<gw2object type="skill" objid="33971"></gw2object>
+	<gw2object type="skill" objid="28824"></gw2object>
+	<gw2object type="skill" objid="49555"></gw2object>
+	<gw2object type="skill" objid="50007"></gw2object>
+	<gw2object type="skill" objid="58494"></gw2object>
+	<gw2object type="skill" objid="58529"></gw2object>
+	<gw2object type="skill" objid="58701"></gw2object>
+	<gw2object type="skill" objid="28485"></gw2object>
+	<gw2object type="skill" objid="33327"></gw2object>
+	<gw2object type="skill" objid="57925"></gw2object>
+	<gw2object type="skill" objid="14653"></gw2object>
+	<gw2object type="skill" objid="14651"></gw2object>
+	<gw2object type="skill" objid="18871"></gw2object>
+	<gw2object type="skill" objid="14618"></gw2object>
+	<gw2object type="skill" objid="14617"></gw2object>
+	<gw2object type="skill" objid="18868"></gw2object>
+	<gw2object type="skill" objid="19554"></gw2object>
+	<gw2object type="skill" objid="19559"></gw2object>
+	<gw2object type="skill" objid="19556"></gw2object>
+	<gw2object type="skill" objid="19551"></gw2object>
+	<gw2object type="skill" objid="18846"></gw2object>
+	<gw2object type="skill" objid="18862"></gw2object>
+	<gw2object type="skill" objid="19560"></gw2object>
+	<gw2object type="skill" objid="18850"></gw2object>
+	<gw2object type="skill" objid="18857"></gw2object>
+	<gw2object type="skill" objid="18852"></gw2object>
+	<gw2object type="skill" objid="19561"></gw2object>
+	<gw2object type="skill" objid="18845"></gw2object>
+	<gw2object type="skill" objid="18864"></gw2object>
+	<gw2object type="skill" objid="19552"></gw2object>
+	<gw2object type="skill" objid="18848"></gw2object>
+	<gw2object type="skill" objid="19557"></gw2object>
+	<gw2object type="skill" objid="19549"></gw2object>
+	<gw2object type="skill" objid="18853"></gw2object>
+	<gw2object type="skill" objid="18872"></gw2object>
+	<gw2object type="skill" objid="19562"></gw2object>
+	<gw2object type="skill" objid="18866"></gw2object>
+	<gw2object type="skill" objid="19555"></gw2object>
+	<gw2object type="skill" objid="19558"></gw2object>
+	<gw2object type="skill" objid="19550"></gw2object>
+	<gw2object type="skill" objid="19553"></gw2object>
+	<gw2object type="skill" objid="18847"></gw2object>
+	<gw2object type="skill" objid="19563"></gw2object>
+	<gw2object type="skill" objid="18861"></gw2object>
+	<gw2object type="skill" objid="14652"></gw2object>
+	<gw2object type="skill" objid="18867"></gw2object>
+	<gw2object type="skill" objid="18855"></gw2object>
+	<gw2object type="skill" objid="18869"></gw2object>
+	<gw2object type="skill" objid="18860"></gw2object>
+	<gw2object type="skill" objid="14650"></gw2object>
+	<gw2object type="skill" objid="18849"></gw2object>
+	<gw2object type="skill" objid="18856"></gw2object>
+	<gw2object type="skill" objid="18859"></gw2object>
+	<gw2object type="skill" objid="18865"></gw2object>
+	<gw2object type="skill" objid="18854"></gw2object>
+	<gw2object type="skill" objid="35829"></gw2object>
+	<gw2object type="skill" objid="32482"></gw2object>
+
+
+	<div style="height: 20em"></div>	
 </body>
 </html>
