updated modifier target system

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -386,6 +386,9 @@
 	<gw2object type="skill" objid="5805"></gw2object>
 	<p>This should only display one related skill, even tho there are two in the data. Reason being one of them is for underwater.</p>
 
+	<gw2object type="skill" objid="9933"></gw2object>
+	<p>Slaying potion buff</p>
+
 	<h3>profession inlines</h3>
 	<gw2object type="profession" class="gw2objectembed" objid="Guardian"></gw2object>
 	<gw2object type="profession" class="gw2objectembed" objid="Warrior"></gw2object>
