finally got rid of the custom tags (except gw2object)
also fixed the encoding for individual_tests

--- a/test/individual_tests.htm
+++ b/test/individual_tests.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" style="scroll-behavior: smooth;" lang="en-US">
 <head>
+<meta charset="UTF-8">
 <script src="../out/tooltips.min.js" defer></script>
 
 <script>
