basic testing, compatability for node environments, shuffling files around

--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -66,7 +66,7 @@
 	<p>Clamping duration to one. Damage should not be 0 on the urn buff.</p>
 
 	<gw2object objid="11929" type="skill"></gw2object> with trait: <gw2object objid="11929" type="skill" with-traits="2255"></gw2object>
-	<p>Modifiers can skip other modifiers. Vigor should be at 62.5% with trait.</p>
+	<p><s>Modifiers can skip other modifiers. Vigor should be at 62.5% with trait.</s> TODO Trait got reworked, find replacement for test.</p>
 
 	<gw2object objid="43638" type="skill"></gw2object>
 	<p>PrefixedBuff and Buff in one skill.</p>
