--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -249,7 +249,7 @@
 	<p>PlayerLevel scaling. Item should have 490-520 Power.</p>
 
 	<gw2object type="skill" objid="41220"></gw2object>
-	<p>Hard CC &lt; 1s, should have 100 defiance damage.</p>
+	<p><s>Hard CC &lt; 1s, should have 100 defiance damage.</s> TODO needs to beupdated with another skill</p>
 
 	<gw2object type="skill" objid="10556"></gw2object>
 	<gw2object type="skill" objid="60095"></gw2object>
