changed defaults for quto-collect settings to be less intrusive

--- a/examples/Power Reaper Build (PvP) - Hardstuck.htm
+++ b/examples/Power Reaper Build (PvP) - Hardstuck.htm
@@ -6,8 +6,14 @@
 
 <script>
 	var GW2TooltipsConfig = {
+		autoCollectRuneCounts           : false,
+		autoCollectStatSources          : true,
+		autoCollectSelectedTraits       : true,
+		autoRecomputeCharacterAttributes: true,
+		adjustIncorrectStatIds          : true,
+		autoInferEquipmentUpgrades      : true,
+		autoInferWeaponSetAssociation   : true,
 		apiImpl: (APIs) => new APIs.FakeAPI(),
-		autoCollectRuneCounts: false,
 	}
 	var GW2TooltipsContext = [{
 		gameMode: 'Pvp',
