--- a/examples/Boonstrip Scourge Build (WvW - Zerg) - Hardstuck.htm
+++ b/examples/Boonstrip Scourge Build (WvW - Zerg) - Hardstuck.htm
@@ -8,6 +8,13 @@
 <link rel="stylesheet" href="../out/tooltips.css" />
 <script>
 	var GW2TooltipsConfig = {
+		autoCollectRuneCounts           : true,
+		autoCollectStatSources          : true,
+		autoCollectSelectedTraits       : true,
+		autoRecomputeCharacterAttributes: true,
+		adjustIncorrectStatIds          : true,
+		autoInferEquipmentUpgrades      : true,
+		autoInferWeaponSetAssociation   : true,
 		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
 </script>
