--- a/examples/Heal Scourge Build (Group PvE) - Hardstuck.htm
+++ b/examples/Heal Scourge Build (Group PvE) - Hardstuck.htm
@@ -9,6 +9,13 @@
 
 <script>
 	var GW2TooltipsConfig = {
+		autoCollectRuneCounts           : true,
+		autoCollectStatSources          : true,
+		autoCollectSelectedTraits       : true,
+		autoRecomputeCharacterAttributes: true,
+		adjustIncorrectStatIds          : true,
+		autoInferEquipmentUpgrades      : true,
+		autoInferWeaponSetAssociation   : true,
 		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
 	var GW2TooltipsContext = [{
