--- a/examples/Open world Bladesworn Build (Open World) - Hardstuck.htm
+++ b/examples/Open world Bladesworn Build (Open World) - Hardstuck.htm
@@ -8,6 +8,13 @@
 
 <script>
 	var GW2TooltipsConfig = {
+		autoCollectRuneCounts           : true,
+		autoCollectStatSources          : true,
+		autoCollectSelectedTraits       : true,
+		autoRecomputeCharacterAttributes: true,
+		adjustIncorrectStatIds          : true,
+		autoInferEquipmentUpgrades      : true,
+		autoInferWeaponSetAssociation   : true,
 		apiImpl: (APIs) => new APIs.FakeAPI(),
 	}
 </script>
