--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -275,18 +275,18 @@
 	<gw2object type="skill" objid="58094"></gw2object>
 	<p>PercentLifeForceCost</p>
 
-	<gw2object type="skill" objid="30670" contextSet="1" with-traits="1863"></gw2object>
+	<gw2object type="skill" objid="30670" context-set="1" with-traits="1863"></gw2object>
 	<p>The vulnerability fact should say 'Exists because of trait "..."'</p>
 
 	<gw2object type="trait" objid="2227"></gw2object>
 	<gw2object type="trait" objid="335"></gw2object>
 	<p>Hide icons on sub-skills for traits that would be dev icons (spheres would be dev icons). The second trait should show a subskill icon</p>
 
-	<gw2object type="skill" objid="10532" contextSet="1" with-traits="801"></gw2object>
+	<gw2object type="skill" objid="10532" context-set="1" with-traits="801"></gw2object>
 	<p>Multiple skip layers. The skill should only show one bleeding and one cripple fact.</p>
 
-	<gw2object type="trait" objid="2020" contextSet="1" with-traits="1863"></gw2object>
-	<gw2object type="trait" objid="1942" contextSet="1" with-traits="1927,1942"></gw2object>
+	<gw2object type="trait" objid="2020" context-set="1" with-traits="1863"></gw2object>
+	<gw2object type="trait" objid="1942" context-set="1" with-traits="1927,1942"></gw2object>
 	<gw2object type="trait" objid="487" with-traits="473"></gw2object>
 	<p>Traits that have trigger_traits should not show their facts on the main trait.</p>
 
@@ -399,7 +399,7 @@
 	<h3>Pets</h3>
 	<gw2object type="pet" objid="10"></gw2object>
 	with soulbeast spec:
-	<gw2object type="pet" objid="10" contextSet="2"></gw2object>
+	<gw2object type="pet" objid="10" context-set="2"></gw2object>
 
 	<h3>Skins</h3>
 	<gw2object type="skin" objid="12"></gw2object>
