added a way to override the default text of embeds

--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -167,6 +167,10 @@
 	<gw2object type="effect" class="gw2objectembed" objid="unblockable"></gw2object>
 	<p>Effects are translated individually.</p>
 
+	<gw2object type="effect" class="gw2objectembed" objid="unblockable"><a href="https://wiki-en.guildwars2.com/wiki/Special:Search/Unblockable" target="_blank"><img src="https://assets.gw2dat.com/2261523.png" alt="Unblockable icon">I have a changed name</a></gw2object>
+	<gw2object type="effect" class="gw2objectembed" objid="unblockable">i also have a changed name</gw2object>
+	<p>Named effects.</p>
+
 	<gw2object type="trait" objid="2096"></gw2object>
 	<p>Empty text processing. The trait should have a description.</p>
 
