manual test for specific combination of skip conditions and overrides

--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -28,6 +28,8 @@
 		character: {
 			specializations: new Set([ 55 ]),
 		}
+	},{
+		gameMode: 'Wvw',
 	}]
 </script>
 <link rel="stylesheet" href="../out/tooltips.css" />
@@ -288,6 +290,9 @@
 
 	<gw2object type="skill" objid="10532" context-set="1" with-traits="801"></gw2object>
 	<p>Multiple skip layers. The skill should only show one bleeding and one cripple fact.</p>
+	
+	<gw2object type="skill" objid="29855" context-set="3"></gw2object>
+	<p>Nightfall should have boon conversion fact</p>
 
 	<gw2object type="trait" objid="2020" context-set="1" with-traits="1863"></gw2object>
 	<gw2object type="trait" objid="1942" context-set="1" with-traits="1927,1942"></gw2object>
@@ -419,6 +424,7 @@
 	<gw2object class="gw2objectembed" type="item" objid="268"></gw2object>
 	with skin:
 	<gw2object class="gw2objectembed" type="item" objid="268" skin="12"></gw2object>
+	<p></p>
 
 
 	<div style="height: 20em"></div>
