--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -119,6 +119,9 @@
 	<gw2object objid="30520" type="skill"></gw2object>
 	<p>Removes x facts or similar should not show defiance damage.</p>
 
+	<gw2object objid="71873" type="skill"></gw2object>
+	<p>Shortbow spelling: Damage should not be NaN.</p>
+
 	<gw2object objid="10709" type="skill"></gw2object> with trait: 
 	<gw2object class="auto-transform" objid="10709" type="skill" with-traits="801"></gw2object>
 	<p>Name replacement. This skill should be called 'Devouring Darkness' (not 'Feast of Corruption').<p>
