Fixed old npc skills using `%num1% feet` in facts
closes #108

--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -437,6 +437,11 @@
 	<gw2object class="gw2objectembed" type="item" objid="268" skin="12"></gw2object>
 	<p></p>
 
+	<h3>Special processing for s#12862</h3>
+	<gw2object type="skill" objid="12862"></gw2object>
+	<gw2object type="skill" objid="11721"></gw2object>
+	<p>The fact should not have any placeholders, and no multiple application.</p>
+
 	<h3>Slotted Items</h3>
 	<gw2object objid="91637" stats="161" type="item" slotted="24615,43254,24868,43254"></gw2object>
 	<p>Slotted items should have loaded.</p>
