added test for #115

--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -377,6 +377,7 @@
 	<gw2object type="skill" objid="10273"></gw2object>
 	<gw2object type="skill" objid="44791"></gw2object>
 	<gw2object type="skill" objid="9109"></gw2object>
+	<gw2object type="skill" objid="71799"></gw2object>
 	<p>Skillchain (ambush skills dont work without context)</p>
 
 	
