--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -352,6 +352,12 @@
 	<gw2object type="trait" objid="1682"></gw2object>
 	<p>Traits with base attribute increases that are derivable.</p>
 
+	<gw2object type="item" objid="74634"></gw2object>
+	<gw2object type="item" objid="72532"></gw2object>
+	<gw2object type="skill" objid="33776"></gw2object>
+	<gw2object type="item" objid="91805"></gw2object>
+	<p>These should have facts.</p>
+
 
 	<gw2object type="skill" objid="5802"></gw2object>
 	<gw2object type="skill" objid="5933"></gw2object>
