--- a/examples/individual_tests.htm
+++ b/examples/individual_tests.htm
@@ -437,6 +437,10 @@
 	<gw2object class="gw2objectembed" type="item" objid="268" skin="12"></gw2object>
 	<p></p>
 
+	<h3>Slotted Items</h3>
+	<gw2object objid="91637" stats="161" type="item" slotted="24615,43254,24868,43254"></gw2object>
+	<p>Slotted items should have loaded.</p>
+
 
 	<div style="height: 20em"></div>
 
